--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -1,24 +1,22 @@
 .navbar {
+  background-color: rgb(5, 35, 116);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #fff;
   width: 100%;
-  height: 90px;
-  margin-top: 20px;
-  background-color: #bb8e11;
-  box-shadow: 0px 3px 6px #c1c3c736;
-  display: flex;
-  justify-content: space-around;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.navbar h1 {
-  color: white;
+.nav .home {
+  color: rgb(17, 15, 15);
   position: relative;
   font-family: fantasy;
+  margin-left: 170px;
 }
-.navbar h1::before {
-  content: '- - : M y M o v i e : - -';
+.nav .home::before {
+  content: '- M y M o v i e -';
   font-family: fantasy;
   width: 100%;
   height: 90%;
-  color: #19345e;
+  color: #e4f0ea;
   position: absolute;
   top: 0;
   left: 0;
@@ -37,23 +35,30 @@
     width: 0%;
   }
 }
-.nav-menu {
-  margin-top: 30px;
+.list-nav {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-left: 255px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.about,
-.team,
-.blog {
-  margin-left: 25px;
+
+.item-nav li {
+  list-style-type: none;
+  padding-left: 50px;
+  font-weight: bolder;
+  display: inline;
 }
-.nav-menu a {
-  text-decoration: none;
-  font-size: 15px;
-  color: #19345e;
-  font-weight: bold;
+.search {
+  width: 300px;
+  vertical-align: middle;
+  white-space: nowrap;
+  padding-left: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+#search {
+  background-color: rgb(15, 17, 17);
+  border: none;
+  height: 35px;
   padding: 15px;
-  font-size: 19px;
-}
-.nav-menu a:hover {
-  color: white;
-  transition: 0.5s;
 }
